# data-pipeline-poc

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.html  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
DATA_REPORTS/: data_analysis.html  data_analysis.md  performance_report.html
EXTRAS/: extra_credit.md
config/: settings.yaml
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql  rolling_return.sql
dbt/models/gold/: dim_asset.sql  dim_asset_type.sql  dim_date.sql  fact_daily_metrics.sql  fact_daily_price.sql  schema.yml
dbt/models/silver/: _sources.yml  stg_prices.sql
dbt/seeds/: asset_catalog.csv
dbt/tests/: no_calendar_gaps_stock.sql  rolling_return_30d_calendar_window.sql
docs/: architecture.md  data_dictionary.md  testing.md
docs/decisions/: 0001-duckdb-default-clickhouse-scale.md  0002-bronze-parquet-fsspec-s3-ready.md  0003-dbt-for-transforms.md  0004-cron-over-airflow.md  0005-single-fact-nullable-ohlc.md  README.md
outputs/: correlation_matrix.csv  correlation_matrix.parquet  dca_vs_lump.csv  dca_vs_lump.parquet  lump_sum_1k.csv  lump_sum_1k.parquet  performance.jsonl  returns_by_window.csv  returns_by_window.parquet  volatility_summary.csv  volatility_summary.parquet
scripts/: bootstrap_warehouse.py  cron-run.sh  record_fixtures.py  seed_dim_date.py
src/analysis/: __init__.py  correlation.py  dca.py  html_report.py  outputs.py  perf_report.py  returns.py
src/pipeline/: __init__.py  cli.py  config.py  models.py
src/pipeline/ingest/: __init__.py  client.py  coingecko.py  massive.py  orchestrator.py  synthetic.py
src/pipeline/observability/: __init__.py  logging.py  perf.py  run_tracker.py
src/pipeline/quality/: __init__.py  assertions.py  schemas.py
src/pipeline/storage/: __init__.py  bronze.py  schema.sql  warehouse.py
tests/: _helpers.py  conftest.py
tests/fixtures/api_responses/: coingecko_bitcoin.json  massive_AAPL.json  massive_C_EURUSD.json
tests/snapshot/: test_outputs.py
tests/unit/: test_atomicity.py  test_backfill.py  test_bronze_idempotent.py  test_dca.py  test_ingest_fixtures.py  test_perf.py  test_resolve_range.py  test_returns.py  test_utc.py  test_weekend.py
(+3 files in other folders)
