[project]
name = "data-platform-poc"
version = "0.1.0"
description = "Traditional assets vs Bitcoin daily data pipeline (Massive + CoinGecko -> DuckDB star schema)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "Jeremy Chan", email = "jeremy@trontalgroup.com" },
]
dependencies = [
    "httpx>=0.27",
    "tenacity>=9.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "pyarrow>=17.0",
    "fsspec>=2024.9",
    "s3fs>=2024.9",
    "duckdb>=1.1",
    "polars>=1.10",
    "psutil>=6.0",
    "pandas>=2.2",
    "pandera>=0.20",
    "pandas-market-calendars>=4.4",
    "structlog>=24.4",
    "typer>=0.12",
    "rich>=13.9",
    "pyyaml>=6.0",
    "python-ulid>=3.0",
    "python-dateutil>=2.9",
    "dbt-core>=1.8",
    "dbt-duckdb>=1.8",
    "plotly>=5.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.7",
    "mypy>=1.11",
    "types-pyyaml>=6.0",
    "types-psutil>=6.0",
    "pandas-stubs>=2.2",
]

[project.scripts]
pipeline = "pipeline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline", "src/analysis"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH", "RUF",
]
ignore = [
    "E501",  # line length handled by formatter
    "RUF001", "RUF002",  # non-ASCII punctuation in strings/docs is intentional
    "TC001", "TC002", "TC003",  # runtime vs type-only import placement — too pedantic
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B", "N"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]
exclude = ["^dbt/.*", "^tests/fixtures/.*"]

[[tool.mypy.overrides]]
module = [
    "duckdb.*",
    "pandera.*",
    "pandas_market_calendars.*",
    "fsspec.*",
    "pyarrow.*",
    "s3fs.*",
    "ulid.*",
    "dateutil.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"
